fix: checkbox align

--- a/packages/checkbox/checkbox.less
+++ b/packages/checkbox/checkbox.less
@@ -68,7 +68,7 @@ input:checked::before {
     }
 
     & span {
-        font-size: calc(20px - var(--border-width));
+        font-size: calc(22px - var(--border-width));
     }
 }
 
@@ -90,6 +90,8 @@ input[disabled]::before {
 span {
     margin-left: 6px;
     font-size: calc(18px - var(--border-width));
+    display: flex;
+    align-items: center;
 }
 
 .rounded {
